# just-an-email

./: .dockerignore  .gitignore  ARCHITECTURE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerpush.sh  JustSending.sln  LICENSE  Makefile  README.md  Vagrantfile  before-deploy.ps1  combine-scripts.sh  deploy.ps1  docker-compose.ci.build.yml  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml  fly.toml  k8s-deployment.yaml  k8s-secret.sample.yaml
rs/: Cargo.toml  Dockerfile  Makefile  fly.toml
rs/frontend/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
rs/frontend/public/: robots.txt
rs/frontend/src/: App.tsx  main.tsx  router.tsx
rs/frontend/src/api/: client.ts  ws.ts
rs/frontend/src/components/: Composer.tsx  Layout.tsx  MessageItem.tsx  MessageList.tsx  QRCode.tsx  SharePanel.tsx
rs/frontend/src/crypto/: encrypt.ts  helpers.ts
rs/frontend/src/hooks/: useEncryption.ts  useSession.ts  useWebSocket.ts
rs/frontend/src/pages/: Connect.tsx  Home.tsx  LiteSession.tsx  LiteSessionDelete.tsx  NotFound.tsx  Password.tsx  SecureLine.tsx  Session.tsx  Stats.tsx
rs/frontend/src/styles/: index.css
rs/src/: config.rs  main.rs  state.rs
rs/src/db/: app_db.rs  mod.rs  schema.rs  stats_db.rs
rs/src/models/: message.rs  mod.rs  public_key.rs  session.rs  share_token.rs  stats.rs
rs/src/routes/: app.rs  app_lite.rs  files.rs  home.rs  mod.rs  public_key.rs  secure_line.rs  stats.rs
rs/src/services/: cleanup.rs  helpers.rs  mod.rs
rs/src/ws/: conversation.rs  mod.rs  protocol.rs  secure_line.rs
(+114 files in other folders)
